# veb_dz1

./: app.py  index.html  pyproject.toml
