[tool.poetry]
name = "pythonproject8"
version = "0.1.0"
description = ""
authors = ["Alex19901509 <147518422+Alex19901509@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
